--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <p>Gain access to our full library of tutorials along with expert code reviews. 
   Perfect for any developers who are serious about honing their skills.</p>
   </div>
-  <div id="bottom-section"><div id="bottom-left-section">
+  <div id="bottom-section">
+    <div id="bottom-left-section">
     <h4>Monthly Subscription</h4>
     <div id="price-container">
       <div id="price">$29</div>
